fix z-index

--- a/RussiaBlock/css/index.css
+++ b/RussiaBlock/css/index.css
@@ -48,6 +48,7 @@ button
 
     justify-content: center;
     align-items: center;
+    z-index: 9;
 }
 
 .start-container button
@@ -78,7 +79,7 @@ button
 .setting-container
 {
     position: absolute;
-    z-index: 4;
+    z-index: 8;
     top: 0;
     left: 0;
 
@@ -112,7 +113,7 @@ button
 #control-container .top,
 #control-container .down
 {
-    z-index: 9;
+    z-index: 5;
 
     width: 100%;
     height: 400px;
@@ -226,7 +227,7 @@ button
     border-left: 1px solid green;
 }
 .panel-body {
-    z-index: 10;
+    z-index: 7;
 }
 .panel-body button
 {
@@ -237,5 +238,5 @@ button
     height: 40px;
 
     background-color: #fff;
-    z-index: 10;
+    z-index: 6;
 }
